--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,8 @@
 @import '/src/utils/media-queries.scss';
+@import '/src/utils/indents.scss';
 @import '/src/base.scss';
 @import '/src/components/tile/tile.scss';
 @import '/src/components/tile-gallery/tile-gallery.scss';
+@import '/src/components/header/header.scss';
+@import '/src/layouts/section/section.scss';
+@import '/src/blocks/main-block/main-block.scss';
