--- a/src/base.scss
+++ b/src/base.scss
@@ -1,5 +1,9 @@
+* {
+	box-sizing: border-box;
+}
+
 body {
-	font: 10px Montserrat, Arial;
+	font: 16px Montserrat, Arial;
 	line-height: 1.5;
 	color: #333;
 }
@@ -8,17 +12,17 @@ img {
 	width: 100%;
 }
 
-img, p, h1, h2, h3, h4, h5 {
+html, body, img, p, h1, h2, h3, h4, h5 {
 	margin: 0;
 	padding: 0;
 }
 
 p {font-size: 16px;}
 
-h1 {font-size: 64px;}
-h2 {font-size: 48px;}
-h3 {font-size: 36px;}
-h4 {font-size: 24px;}
+h1 {font-size: 48px;}
+h2 {font-size: 36px;}
+h3 {font-size: 24px;}
+h4 {font-size: 18px;}
 h5 {font-size: 18px;}
 
 .container {
