--- a/src/components/tile-gallery/tile-gallery.scss
+++ b/src/components/tile-gallery/tile-gallery.scss
@@ -1,17 +1,20 @@
 .tile-gallery {
-    align-items: center;
+    justify-content: center;
     flex-direction: row;
     display: flex;
 
     @include media-laptop {
         flex-direction: column;
+        align-items: center;
     }
 
     @include media-tablet {
         flex-direction: column;
+        align-items: center;
     }
 
     @include media-mobile {
         flex-direction: column;
+        align-items: center;
     }
 }
