--- a/src/components/tile/tile.scss
+++ b/src/components/tile/tile.scss
@@ -1,5 +1,6 @@
 .tile {
     text-align: center;
+    padding-right: 60px;
 
     @include media-laptop {
         max-width: 360px;
@@ -16,16 +17,22 @@
         margin-top: 64px;
     }
 
+    &:last-child {
+        padding-right: 0;
+    }
+
     &__image {
         width: 120px;
         height: 120px;
     }
 
     &__heading {
-        margin-top: 36px;
+        margin-top: 24px;
+        max-width: 300px;
     }
 
     &__text {
-        margin-top: 16px;
+        margin-top: 8px;
+        max-width: 300px;
     }
 }
