--- a/src/includes-hub.pug
+++ b/src/includes-hub.pug
@@ -1,4 +1,5 @@
 include ./layouts/section/section
 include ./components/tile/tile
 include ./components/tile-gallery/tile-gallery
+include ./components/form/form
 
