mark freelance-is-difficult up

--- a/src/blocks/main-block/main-block.scss
+++ b/src/blocks/main-block/main-block.scss
@@ -11,6 +11,7 @@
 .main-block {
     position: relative;
     z-index: 2;
+    margin-bottom: 100px;
     height: calc(100vh - 60px);
     background: center / cover no-repeat url(img/working-man.jpg);
 
