--- a/src/index.scss
+++ b/src/index.scss
@@ -7,3 +7,4 @@
 @import '/src/components/form/form.scss';
 @import '/src/layouts/section/section.scss';
 @import '/src/blocks/main-block/main-block.scss';
+@import '/src/blocks/freelance-is-diffucilt/freelance-is-diffucilt.scss';
