--- a/src/layouts/section/section.pug
+++ b/src/layouts/section/section.pug
@@ -5,3 +5,4 @@ mixin section(args)
             .section__description(class="mb-64")= args.description
         if block
             block
+        .section__afterwards= args.afterwards
