--- a/src/components/header/head.pug
+++ b/src/components/header/head.pug
@@ -1,3 +1,4 @@
 head
+    meta(name="viewport" content="width=device-width; initial-scale=1.0")
     style.
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;700&display=swap');
