--- a/src/pages/main.pug
+++ b/src/pages/main.pug
@@ -3,5 +3,6 @@ extends ../layouts/main-layout
 block content
     include ../blocks/main-block/main-block
     .container
+        include ../blocks/freelance-is-diffucilt/freelance-is-diffucilt
         include ../blocks/problems-we-solve/problems-we-solve
         include ../blocks/what-you-get/what-you-get
