редизайн: первый блок и секции

--- a/src/base.scss
+++ b/src/base.scss
@@ -3,13 +3,13 @@
 }
 
 body {
-	font: 16px Montserrat, Arial;
+	font: 16px Inter, Arial;
 	line-height: 1.5;
 	color: #333;
 }
 
 input, button {
-	font-family: Montserrat;
+	font-family: Inter;
 }
 
 ::selection {
