--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -3,7 +3,7 @@ include ./head
     .container
         .header__inner
             .header__left
-                img.header__logo(src="../img/logo.svg")
+                a.header__logo(href="#") Light Start
                 nav.header__nav
                     a.header__nav-link(href="") Главная
                     a.header__nav-link(href="") Контакты
