--- a/src/includes-hub.pug
+++ b/src/includes-hub.pug
@@ -1,5 +1,7 @@
 include ./components/tile/tile
 include ./components/tile-gallery/tile-gallery
+include ./components/card/card
+include ./components/button/button
 include ./components/form/form
 include ./components/points-list/points-list
 include ./components/section-column/section-column
