--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,8 @@
 @import '/src/components/header/header.scss';
 @import '/src/components/tile/tile.scss';
 @import '/src/components/tile-gallery/tile-gallery.scss';
+@import '/src/components/card/card.scss';
+@import '/src/components/button/button.scss';
 @import '/src/components/form/form.scss';
 @import '/src/components/points-list/points-list.scss';
 @import '/src/components/section-column/section-column.scss';
