--- a/src/pages/main.pug
+++ b/src/pages/main.pug
@@ -3,3 +3,5 @@ extends ../layouts/main-layout
 block content
     include ../blocks/main-block/main-block
     include ../blocks/save-your-time/save-your-time
+    include ../blocks/also-you-get/also-you-get
+    include ../blocks/services/services
