--- a/src/components/section-column/section-column.pug
+++ b/src/components/section-column/section-column.pug
@@ -1,8 +1,9 @@
 mixin section-column(args)
-    .section
-        .container
-            .section__inner
-                .section-text
-                    h3.section__title= args.title
-                    .section__description= args.description
-                img.section__picture(src= args.imgSrc)
+	.section
+		.container
+			.section__inner
+				.section-text
+					h3.section__title= args.title
+					.section__description= args.description
+				.section__picture-wrapper
+					img.section__picture(src= args.imgSrc)
