--- a/src/components/tile-gallery/tile-gallery.scss
+++ b/src/components/tile-gallery/tile-gallery.scss
@@ -1,6 +1,7 @@
 .tile-gallery {
     justify-content: center;
     flex-direction: row;
+    flex-wrap: wrap;
     display: flex;
 
     @include media-laptop {
@@ -17,4 +18,18 @@
         flex-direction: column;
         align-items: center;
     }
+
+    .tile:nth-child(3n),
+    .tile:last-child {
+        margin-right: 0;
+    }
+
+    .tile {
+        margin-bottom: 64px;
+    }
+    .tile:nth-child(4),
+    .tile:last-child {
+        margin-bottom: 0;
+    }
+
 }
