--- a/src/components/header/head.pug
+++ b/src/components/header/head.pug
@@ -1,4 +1,10 @@
 head
     meta(name="viewport" content="width=device-width; initial-scale=1.0")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js")
+
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js")
+
+    link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css")
+
     style.
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap');
