feat: finish modal

--- a/src/blocks/main-block/main-block.pug
+++ b/src/blocks/main-block/main-block.pug
@@ -4,6 +4,6 @@ section.main-block
             .main-block__main-text
                 h1.main-block-cta__title Не можете найти себя во фрилансе?
                 p.main-block-cta__description Больше не нужно тратить время и силы на поиск заказов, вместе с Light Start вы сможете делать больше за меньшее время.
-                button.main-block-cta__button Подать заявку
+                +button('Подать заявку', 'primary')
         .main-block__right
             img(src="../img/Freelancer-bro.svg")
