--- a/src/blocks/services/services.pug
+++ b/src/blocks/services/services.pug
@@ -6,14 +6,14 @@ section.without-columns.section.main-block
                 +card(
                     'Студент',
                     'Lorem ipsum dolor sit amet, consectetur adipiscing elit.',
-                    '5900 ₽',
                     '3000 ₽',
+                    '1200 ₽',
                     '3 месяца',
                     'Купить',
                     'orange'
                 )
                 +card(
-                    'Студент',
+                    'Профессионал',
                     'Lorem ipsum dolor sit amet, consectetur adipiscing elit.',
                     '5900 ₽',
                     '3000 ₽',
@@ -22,11 +22,13 @@ section.without-columns.section.main-block
                     'purple'
                 )
                 +card(
-                    'Студент',
+                    'Учёный',
                     'Lorem ipsum dolor sit amet, consectetur adipiscing elit.',
-                    '5900 ₽',
-                    '3000 ₽',
+                    '10000 ₽',
+                    '6900 ₽',
                     '3 месяца',
                     'Купить',
                     'mint'
                 )
+            .modal#order-modal
+                +modal()
