--- a/src/includes-hub.pug
+++ b/src/includes-hub.pug
@@ -2,7 +2,8 @@ include ./components/tile/tile
 include ./components/tile-gallery/tile-gallery
 include ./components/card/card
 include ./components/button/button
-include ./components/form/form
+include ./components/modal/modal
+include ./components/price/price
 include ./components/points-list/points-list
 include ./components/section-column/section-column
 
