--- a/src/base.scss
+++ b/src/base.scss
@@ -63,6 +63,20 @@ h5 {font-size: 18px;}
 	}
 }
 
+.modal {
+	padding: 60px;
+	border-radius: 24px;
+	box-shadow: 0 0 10px 0 rgba(#333, 20%);
+}
+
+.modal a.close-modal {
+	top: 32px;
+	right: 32px;
+	width: 20px;
+	height: 20px;
+	background-image: url('../src/img/cancel.svg');
+}
+
 .orange {
 	.card__title {
 		color: #F6450D;
@@ -70,6 +84,16 @@ h5 {font-size: 18px;}
 	
 	.card__button {
 		background: #F6450D;
+		box-shadow: 4px 4px 20px 0px rgb(#F6450D, 20%);
+
+		&:hover {
+			background: #cc3505;
+			box-shadow: 4px 4px 20px 2px rgb(#F6450D, 30%);
+		}
+
+		&:active {
+			background: #F6450D;
+		}
 	}
 }
 
@@ -80,6 +104,16 @@ h5 {font-size: 18px;}
 	
 	.card__button {
 		background: #7019DE;
+		box-shadow: 4px 4px 20px 0px rgb(#7019DE, 20%);
+
+		&:hover {
+			background: #5a12b5;
+			box-shadow: 4px 4px 20px 2px rgb(#7019DE, 30%);
+		}
+
+		&:active {
+			background: #7019DE;
+		}
 	}
 }
 
@@ -90,5 +124,15 @@ h5 {font-size: 18px;}
 	
 	.card__button {
 		background: #1DE3B4;
+		box-shadow: 4px 4px 20px 0px rgb(#1DE3B4, 20%);
+
+		&:hover {
+			background: #0fbb92;
+			box-shadow: 4px 4px 20px 2px rgb(#1DE3B4, 30%);
+		}
+
+		&:active {
+			background: #1DE3B4;
+		}
 	}
 }
