--- a/src/blocks/also-you-get/also-you-get.pug
+++ b/src/blocks/also-you-get/also-you-get.pug
@@ -1,4 +1,4 @@
-.section.section-column
+.section.section-column#benefits
     .container
         .section__inner
             h2.section-h2-title Также вы получаете
