--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -5,9 +5,9 @@ include ./head
             .header__left
                 a.header__logo(href="#") Light Start
                 nav.header__nav
-                    a.header__nav-link(href="") Главная
-                    a.header__nav-link(href="") Контакты
-                    a.header__nav-link(href="") Отзывы
+                    a.header__nav-link(href="#main") Главная
+                    a.header__nav-link(href="#benefits") Преимущества
+                    a.header__nav-link(href="#services") Услуги
             .header__right
                 ul.header__social-links
                     a.social__link(href="")
@@ -17,6 +17,4 @@ include ./head
                     a.social__link(href="") 
                         <i class="fab fa-telegram-plane"></i>
                     a.social__link(href="") 
-                        <i class="fab fa-youtube"></i>
-                    a.social__link(href="") 
-                        <i class="fab fa-facebook"></i>
+                        <i class="fab fa-facebook-f"></i>>
