--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@
 @import '/src/utils/indents.scss';
 @import '/src/base.scss';
 @import '/src/components/header/header.scss';
+@import '/src/components/footer/footer.scss';
 @import '/src/components/tile/tile.scss';
 @import '/src/components/tile-gallery/tile-gallery.scss';
 @import '/src/components/card/card.scss';
@@ -11,3 +12,4 @@
 @import '/src/components/points-list/points-list.scss';
 @import '/src/components/section-column/section-column.scss';
 @import '/src/blocks/main-block/main-block.scss';
+@import '/src/blocks/services/services.scss';
