--- a/src/blocks/main-block/main-block.scss
+++ b/src/blocks/main-block/main-block.scss
@@ -4,10 +4,23 @@
         justify-content: space-between;
         align-items: center;
         display: flex;
+
+        @include media-tablet {
+            flex-direction: column-reverse;
+            padding: 40px 40px;
+        }
+
+        @include media-mobile {
+            padding: 40px 20px;
+        }
     }
 
     &__left {
         width: 50%;
+
+        @include media-tablet {
+            width: 100%;
+        }
     }
 
     &__right {
@@ -15,6 +28,22 @@
         display: flex;
         width: 50%;
         max-width: 500px;
+
+        img {
+            @include media-tablet {
+                margin: 0 auto;
+                max-width: 320px;
+            }
+
+            @include media-mobile {
+                max-width: 260px;
+                margin-bottom: 16px;
+            }
+        }
+
+        @include media-tablet {
+            width: 100%;
+        }
     }
 
     &-cta__title {
@@ -23,6 +52,16 @@
         font-size: 36px;
         font-weight: 900;
         line-height: 1.3;
+
+        @include media-tablet {
+            max-width: 500px;
+            font-size: 30px;
+        }
+
+        @include media-mobile {
+            margin-bottom: 16px;
+            font-size: 24px;
+        }
     }
 
     &-cta__description {
@@ -31,5 +70,15 @@
         font-size: 18px;
         line-height: 1.5;
         color: #999;
+
+        @include media-mobile {
+            font-size: 16px;
+        }
+    }
+
+    .button {
+        @include media-sm-mobile {
+            width: 100%;
+        }
     }
 }
