--- a/src/components/modal/modal.pug
+++ b/src/components/modal/modal.pug
@@ -1,13 +1,21 @@
-mixin modal()
+mixin modal(withService)
     .order-modal
         .order-modal__title Студент 
         form.order-modal-form
+            if withService
+                .form__field
+                    label.form__label(for="product") Услуга
+                    select#product.form__input(name='product')
+                        option(value='') Выберите услугу
+                        option(value='student') Студент
+                        option(value='professional') Профессионал
+                        option(value='scientist') Учёный
             .form__field
                 label.form__label(for="email") Email
                 input#email.form__input(type="email" name="email")
             .form__field
-                label.form__label(for="email") Номер телефона
-                input#email.form__input(type="tel" name="phone")
+                label.form__label(for="phone") Номер телефона
+                input#phone.form__input(type="tel" name="phone")
             .form__submit-button
                 +button('Приобрести', 'secondary', 'card__button')
 
