--- a/src/components/tile-gallery/tile-gallery.scss
+++ b/src/components/tile-gallery/tile-gallery.scss
@@ -32,4 +32,11 @@
         margin-bottom: 0;
     }
 
+    
+    @include media-laptop {
+        .tile:nth-child(3),
+        .tile:nth-child(4) {
+            margin-bottom: 48px;
+        }
+    }
 }
