--- a/src/utils/media-queries.scss
+++ b/src/utils/media-queries.scss
@@ -1,23 +1,29 @@
 @mixin media-desktop {
-    @media (min-width: 1200px) { 
+    @media screen and (min-width: 1200px) { 
         @content;
     }
 }
 
 @mixin media-laptop {
-    @media (min-width: 992px) and (max-width: 1199px) {
+    @media screen and (max-width: 1199px) {
         @content;
     }
 }
 
 @mixin media-tablet {
-    @media (min-width: 768px) and (max-width: 991px) {
+    @media screen and (max-width: 991px) {
         @content;
     }
 }
 
 @mixin media-mobile {
-    @media (max-width: 767px) {
+    @media screen and(max-width: 767px) {
+        @content;
+    }
+}
+
+@mixin media-sm-mobile {
+    @media screen and(max-width: 420px) {
         @content;
     }
 }
