feat: финальные штрихи, фикс багов

--- a/src/blocks/services/services.pug
+++ b/src/blocks/services/services.pug
@@ -1,4 +1,4 @@
-section.without-columns.section-column.section.main-block#services
+section.without-columns.section-column.section#services
     .container
         .section__inner
             h2.section-h2-title Наши услуги
