--- a/src/components/card/card.pug
+++ b/src/components/card/card.pug
@@ -2,10 +2,13 @@ mixin card(title, text, oldPrice, currentPrice, duration, buttonText, theme)
     .card(class= theme)
         h4.card__title= title
         .card__text= text
-        .card__price
-            +price({
-                old: oldPrice,
-                current: currentPrice,
-                duration: duration
-            })
-        +button("Купить", "secondary", "card__button", title)
+        if oldPrice && currentPrice && duration
+            .card__price
+                +price({
+                    old: oldPrice,
+                    current: currentPrice,
+                    duration: duration
+                })
+            +button("Купить", "secondary", "card__button", title)
+        else
+            a.card__close
