--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -2,6 +2,6 @@ footer.footer
     .container
         .footer__inner
             div.footer__item Light Start. Помощь и продвижение на фрилансе
-            a.footer__item.link(href="mailto:lightstart@gmail.com") lightstart@gmail.com
-            a.footer__item.link(href="tel:+792093242") +792093242
+            a.footer__item.link(href="mailto:ligghtstart@gmail.com" about="_blank") ligghtstart@gmail.com
+            a.footer__item.link(href="tel:+792093242" about="_blank") +792093242
             div.footer__item Все права защищены.
