--- a/src/index.scss
+++ b/src/index.scss
@@ -13,3 +13,4 @@
 @import '/src/components/section-column/section-column.scss';
 @import '/src/blocks/main-block/main-block.scss';
 @import '/src/blocks/services/services.scss';
+@import '/src/blocks/success/success.scss';
