--- a/src/pages/main.pug
+++ b/src/pages/main.pug
@@ -5,3 +5,4 @@ block content
     include ../blocks/save-your-time/save-your-time
     include ../blocks/also-you-get/also-you-get
     include ../blocks/services/services
+    include ../blocks/success/success
