--- a/src/base.scss
+++ b/src/base.scss
@@ -42,6 +42,10 @@ h3 {font-size: 30px;}
 h4 {font-size: 24px;}
 h5 {font-size: 18px;}
 
+.hidden {
+	display: none;
+}
+
 .link {
 	color: #fff;
 	transition: color .1s;
