--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -10,11 +10,11 @@ include ./head
                     a.header__nav-link(href="#services") Услуги
             .header__right
                 ul.header__social-links
-                    a.social__link(href="")
+                    a.social__link(href="https://vk.com/ligghtstart" about="_blank")
                         <i class="fab fa-vk"></i>
-                    a.social__link(href="") 
+                    a.social__link(href="https://www.instagram.com/ligghtstart/" about="_blank") 
                         <i class="fab fa-instagram"></i>
-                    a.social__link(href="") 
+                    a.social__link(href="" about="_blank") 
                         <i class="fab fa-telegram-plane"></i>
-                    a.social__link(href="") 
+                    a.social__link(href="https://www.facebook.com/groups/319399135951595" about="_blank") 
                         <i class="fab fa-facebook-f"></i>>
