feat: add attribution for assets

--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -1,7 +1,20 @@
 footer.footer
     .container
         .footer__inner
-            div.footer__item Light Start. Помощь и продвижение на фрилансе
-            a.footer__item.link(href="mailto:ligghtstart@gmail.com" about="_blank") ligghtstart@gmail.com
-            a.footer__item.link(href="tel:+792093242" about="_blank") +792093242
-            div.footer__item Все права защищены.
+            .footer-column
+                div.footer__item Light Start. Помощь и продвижение на фрилансе
+                .footer__item Пишите нам на наш Email 
+                    a.link(href="mailto:ligghtstart@gmail.com" target="_blank") ligghtstart@gmail.com
+                .footer__item Наш номер телефона 
+                    a.link(href="tel:+792093242" target="_blank") +792093242
+                div.footer__item Все права защищены.
+            .footer-column
+                div.footer__item
+                    | Icons made by 
+                    a.link(href='https://www.freepik.com' title='Freepik' target="_blank") Freepik
+                    |  from 
+                    a.link(href='https://www.flaticon.com/' title='Flaticon' target="_blank") www.flaticon.com
+                div.footer__item We also used icons from 
+                    a.link(href="https://www.icons8.com" title="icons8" target="_blank") www.icons8.com
+                div.footer__item We used illustrations from  
+                    a.link(href="https://storyset.com/" title="storyset" target="_blank") www.storyset.com
