--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -8,16 +8,31 @@
 }
 
 .footer__inner {
-    justify-content: space-between;
     display: flex;
-    padding: 80px 0;
+    padding: 60px 0;
     font-size: 14px;
+
+    @include media-sm-mobile {
+        flex-direction: column;
+        padding: 40px 0;
+    }
+}
+
+.footer-column {
+    flex-direction: column;
+    display: flex;
+    width: 50%;
 
     @include media-tablet {
         flex-direction: column;
     }
 
     @include media-sm-mobile {
-        padding: 40px 0;
+        margin-bottom: 24px;
+        width: 100%;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
     }
 }
